--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,86 +1,140 @@
 body {
-    margin: 0px 20px 0px 20px;
-    color: #FDFEFF;
+  margin: 0px 20px 0px 20px;
+  color: #fdfeff;
+  color: #a9adb8;
+  background-color: #0a101e;
+  overflow-x: hidden;
 }
+
 img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-header {
-  margin-left: -24px!important;
-  margin-right: -24px!important;
+.progress {
+  width: 100%;
+  height: 8px;
 }
-.custom-container-hero{
-   
-    height: 931px;
-   
+.custom-container-hero {
+  height: 931px;
 }
-.custom-container-content-hero{
-    
-margin-top: 100px;
+.custom-section-header {
+  padding: 0px;
+}
+.custom-container-content-hero {
+  margin-top: 100px;
+}
+
+.custom-img-half-face-bg {
+  height: 500px;
+  padding-right: 45px;
+  opacity: 6;
+}
+.custom-img-half-face-bg img {
+  opacity: 0.1;
+}
+.custom-div-img-portfolio{
+ 
 }
 /*Section Small Image*/
 .container {
-    border-radius: 50%;
-    height: 312px;
-    -webkit-tap-highlight-color: transparent;
-    transform: scale(0.40);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    width: 400px;
-  }
-  
-  .container:hover {
-    transform: scale(0.54);
-  }
-  .custom-container-content-hero{
-    width: 900px;
-    height: 430px;
-    padding: 55px;
-  }
-  .container-inner {
-    clip-path: path(
-      "M 390,400 C 390,504.9341 304.9341,590 200,590 95.065898,590 10,504.9341 10,400 V 10 H 200 390 Z"
-    );
-    position: relative;
-    transform-origin: 50%;
-    top: -200px;
-  }
-  .circle {
-    background-color: #fee7d3;
-    border-radius: 50%;
-    border: solid 15px #212529;
-    cursor: pointer;
-    height: 380px;
-    left: 10px;
-    pointer-events: none;
-    position: absolute;
-    top: 210px;
-    width: 380px;
-  }
-  .img {
-    pointer-events: none;
-    position: relative;
-    transform: translateY(20px) scale(1.15);
-    transform-origin: 50% bottom;
-    transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .container:hover .img {
-    transform: translateY(0) scale(1.2);
-  }
-  .img1 {
-    left: 22px;
-    top: 164px;
-    width: 340px;
-  }
+  border-radius: 50%;
+  height: 312px;
+  -webkit-tap-highlight-color: transparent;
+  transform: scale(0.4);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 400px;
+}
+
+.container:hover {
+  transform: scale(0.54);
+}
+.custom-container-content-hero {
+  width: 900px;
+  height: 430px;
+  padding: 55px;
+}
+.container-inner {
+  clip-path: path(
+    "M 390,400 C 390,504.9341 304.9341,590 200,590 95.065898,590 10,504.9341 10,400 V 10 H 200 390 Z"
+  );
+  position: relative;
+  transform-origin: 50%;
+  top: -200px;
+}
+.circle {
+  background-color: #fee7d3;
+  border-radius: 50%;
+  border: solid 15px #212529;
+  cursor: pointer;
+  height: 380px;
+  left: 10px;
+  pointer-events: none;
+  position: absolute;
+  top: 210px;
+  width: 380px;
+}
+.img {
+  pointer-events: none;
+  position: relative;
+  transform: translateY(20px) scale(1.15);
+  transform-origin: 50% bottom;
+  transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.container:hover .img {
+  transform: translateY(0) scale(1.2);
+}
+.img1 {
+  left: 22px;
+  top: 164px;
+  width: 340px;
+}
 /*------End Section Small Image*/
 
+/* Button Download CV*/
+.download-btn {
+  border-radius: 4px;
+  background-color: #fec544;
+  border: none;
+  border-radius: 50px;
+  color: #070d1b;
+  text-align: center;
+  padding: 10px;
+  width: 180px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 15px 0px 0px 0px;
+}
 
+.download-btn {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.download-btn:after {
+  content: "»";
+  position: absolute;
+  opacity: 0;
+  top: 9px;
+  right: -10px;
+  transition: 0.5s;
+}
+
+.download-btn:hover {
+  padding-right: 24px;
+  padding-left: 8px;
+  transform: translateY(-5px);
+  box-shadow: #fec544 0px 20px 20px -15px;
+}
+
+.download-btn:hover:after {
+  opacity: 1;
+  right: 10px;
+}
+/*-------End Bitton Download CV*/
 
 /* Seccion Prueba */
-
-
-
-
 
 /* Fin Seccion Prueba */
