--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,36 @@ img {
   object-fit: cover;
 }
 
+@font-face {
+  font-family: "doctor";
+  src: url(../fonts/TheDoctor.ttf);
+}
+@font-face {
+  font-family: "Groningen-Bold";
+  src: url(../fonts/Groningen-Bold.ttf);
+}
+@font-face {
+  font-family: "Groningen-Regular";
+  src: url(../fonts/Groningen-Regular.ttf);
+}
+@font-face {
+  font-family: "CassanemoPress";
+  src: url(../fonts/CassanemoPress.ttf);
+} 
+.water {
+  font-family: "CassanemoPress";
+}
+.doctor{
+  font-family: "doctor";
+  font-size: 180%;
+}
+
+p ,li {
+  font-family: "Groningen-Regular";
+}
+h1, h2 ,h3, h4, h5 ,h6, a, span {
+  font-family: "Groningen-Bold";
+}
 .grey {
   color: var(--grey-text-color);
 }
@@ -43,7 +73,6 @@ img {
 }
 /* Custom Nav Bar */
 .custom-nav-bar {
-  padding: 20px;
   background-color: var(--bg-color);
 }
 /* Custom container Avatar */
@@ -233,6 +262,10 @@ from{
   }
   .custom-avatar-img-profile{
     margin-left: 15px;
+  }
+  
+  .custom-avatar-img-profile{
+    margin-bottom: 0px;
   }
 }
 
